Bug 158221 - Insert bookmarks dialogue takes a very long time to appear when there are many bookmarks
Summary: Insert bookmarks dialogue takes a very long time to appear when there are man...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.8.2 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:25.8.0 target:24.8.6 target:25...
Keywords: bibisected, bisected, regression
: 157623 162795 (view as bug list)
Depends on:
Blocks: Bookmarks
  Show dependency treegraph
 
Reported: 2023-11-15 08:05 UTC by Jean-Francois Nifenecker
Modified: 2025-08-09 12:54 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Test document (1.18 MB, application/vnd.oasis.opendocument.text)
2023-11-15 08:06 UTC, Jean-Francois Nifenecker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Francois Nifenecker 2023-11-15 08:05:14 UTC
Description:
I've got a 59 pages document with 245 bookmarks (attached).
The Insert > Bookmarks dialogue takes 1 min 30 to appear on my machine. Calling that dialogue twice in a row doesn't make a difference: the 2nd call is as long as the first one.
Side note: The bookmarks list display suffers a slight delay in the Navigator (ca. 2-3 sec).

On a blank new document, the dialogue appears immediately.


Steps to Reproduce:
1. Open the attached document
2. Go to Insert > Bookmarks

Actual Results:
1 min 30 to display the dialogue.

Expected Results:
Quasi instant display.


Reproducible: Always


User Profile Reset: No

Additional Info:
The OS is a very fresh install of LinuxMint 21.2 Cinnamon.
LibreOffice is the official version (packaged version was removed). Currently no extension has been added to the standard ones.

I previously worked with this document under 7.3 (official) under LinuxMint 20.3 Cinnamon without any problem.

Version: 7.5.8.2 (X86_64) / LibreOffice Community
Build ID: f718d63693263970429a68f568db6046aaa9df01
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Jean-Francois Nifenecker 2023-11-15 08:06:14 UTC
Created attachment 190833 [details]
Test document
Comment 2 m_a_riosv 2023-11-16 00:37:04 UTC
Something strange happen to me with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c60a9db1f2a8e2a088c6b89bcdff4901b28f2864
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
last working for me
Version: 7.4.7.2 (x64) / LibreOffice Community
Build ID: 723314e595e8007d3cf785c16538505a1c878ca5
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES Calc: CL

as if it is going through the document, showing the movement, recollecting the bookmarks, take about 20 seconds to show the bookmark box. Hangs without skia enable (Menu/Tools/Options/LibreOffice/View).
Comment 3 BogdanB 2023-11-16 05:51:07 UTC
Michael, please, could you take a look?

author	Michael Stahl <michael.stahl@allotropia.de>	2022-07-21 19:31:45 +0200
committer	Michael Stahl <michael.stahl@allotropia.de>	2022-07-26 20:15:37 +0200
commit aa6ec3f79607478213272283b7eb17ec2116173c (patch)
tree 873bdaef7a6d99f891ba55901960155d73480556
parent 96844af26402e4ab26ff7ba02e52989c3b294095 (diff)
tdf#150017 sw: allow editing bookmark text in Insert->Bookmarks dialog
Enable editing the text of the bookmark if it's "short" enough and
doesn't span multiple paragraphs; Replace the text when finished.

This will delete any footnotes or text fields in the bookmark text,
which isn't ideal but there's Undo.

Double-clicking the column via property "editable" only seems to work
with native GTK widgets, so provide an additional "Edit Text" button to
start the editing.  The button requires commit fe38553aef2121f358fb58e450ec69314aad851e to edit the correct column
with VCL widgets, and it doesn't work yet with GTK widgets (but with GTK
double-clicking works).

Change-Id: If9e8a148b039889924e4870b2e9bbe977c977ce9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137355
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
 558b63e80bad2d99c6c5b1acc3640018e1c7c4ec is the first bad commit
commit 558b63e80bad2d99c6c5b1acc3640018e1c7c4ec
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Jul 26 20:33:00 2022 +0200

    source aa6ec3f79607478213272283b7eb17ec2116173c
    
    source aa6ec3f79607478213272283b7eb17ec2116173c

 instdir/program/libswuilo.so                       | Bin 2877408 -> 2882528 bytes
 instdir/program/setuprc                            |   2 +-
 instdir/program/versionrc                          |   2 +-
 instdir/share/config/images_breeze.zip             | Bin 1941312 -> 1941312 bytes
 instdir/share/config/images_breeze_dark.zip        | Bin 1937928 -> 1937928 bytes
 instdir/share/config/images_breeze_dark_svg.zip    | Bin 1604694 -> 1604694 bytes
 instdir/share/config/images_breeze_svg.zip         | Bin 1602278 -> 1602278 bytes
 instdir/share/config/images_colibre.zip            | Bin 2838539 -> 2838539 bytes
 instdir/share/config/images_colibre_dark.zip       | Bin 2738585 -> 2738585 bytes
 instdir/share/config/images_colibre_dark_svg.zip   | Bin 2991760 -> 2991760 bytes
 instdir/share/config/images_colibre_svg.zip        | Bin 3186592 -> 3186592 bytes
 instdir/share/config/images_elementary.zip         | Bin 4255343 -> 4255343 bytes
 instdir/share/config/images_elementary_svg.zip     | Bin 5553386 -> 5553386 bytes
 instdir/share/config/images_karasa_jaga.zip        | Bin 4926692 -> 4926692 bytes
 instdir/share/config/images_karasa_jaga_svg.zip    | Bin 19377292 -> 19377292 bytes
 instdir/share/config/images_sifr.zip               | Bin 2153798 -> 2153798 bytes
 instdir/share/config/images_sifr_dark.zip          | Bin 2158217 -> 2158217 bytes
 instdir/share/config/images_sifr_dark_svg.zip      | Bin 1799085 -> 1799085 bytes
 instdir/share/config/images_sifr_svg.zip           | Bin 1795131 -> 1795131 bytes
 instdir/share/config/images_sukapura.zip           | Bin 3062385 -> 3062385 bytes
 instdir/share/config/images_sukapura_svg.zip       | Bin 4393583 -> 4393583 bytes
 .../modules/swriter/ui/insertbookmark.ui           |  20 ++++++++++++++++++--
 22 files changed, 20 insertions(+), 4 deletions(-)
Comment 4 Jean-Francois Nifenecker 2023-11-29 10:42:10 UTC
I've tested using this alpha version:

Version: 24.2.0.0.alpha1 (X86_64) / LibreOffice Community
Build ID: 06946980c858649160c634007e5fac9a5aa81f38
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded

The problem remains, though the waiting duration is shorter (35 sec ; same machine, same OS).
Comment 5 bdgridly 2024-04-30 19:57:57 UTC
Insert > Bookmark also fails for me in version 7.6.2.1 and also in the latest version 24.2.

It looks like the same problem. I select Insert > Bookmark and just after the Bookmark dialog appears, the document starts paging through the pages on its own. This will go on for 15 minutes or so. If I don't want for it to finish and instead click on any of the document pages as it is flipping by, it freezes the paging, but displays a hourglass (blue rotating circle) and appears to hang with all of Writer controls being disabled. There are hundreds of pages in the document. 


The last version where Insert > Bookmarks WORKED for me was: 
Version: 7.4.7.2 (x64) / LibreOffice Community
Build ID: 723314e595e8007d3cf785c16538505a1c878ca5
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

So a change must have been added after 7.4.7.2 that caused this problem. It has been nearly 6 months since this problem has been reported.
Comment 6 Gabor Kelemen (Collabora) 2024-09-16 14:42:42 UTC
*** Bug 162795 has been marked as a duplicate of this bug. ***
Comment 7 Michael Stahl 2025-01-30 17:52:15 UTC
*** Bug 157623 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2025-01-31 09:55:51 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/163ddd7a841fc4ee2b4a79a5ec5e5635bcc0cbc2

tdf#158221 sw: fix performance disaster in SwInsertBookmarkDlg

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Stahl 2025-01-31 10:13:07 UTC
fixed on master
Comment 10 Commit Notification 2025-01-31 10:48:14 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/5e85d816db0e6c4bf31bdfa84faf0507f277e617

tdf#158221 sw: fix performance disaster in SwInsertBookmarkDlg

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-02-01 14:51:43 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/ecd711e03b5376a1be2fb4ac0a7808f41e9255ca

tdf#158221 sw: fix performance disaster in SwInsertBookmarkDlg

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-02-05 10:12:48 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-5":

https://git.libreoffice.org/core/commit/b86661f55d4226d0a69982364b9e17cb65fd245b

tdf#158221 sw: fix performance disaster in SwInsertBookmarkDlg

It will be available in 24.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Jean-Francois Nifenecker 2025-08-09 06:04:49 UTC
(In reply to Commit Notification from comment #12)
> Michael Stahl committed a patch related to this issue.
> It has been pushed to "libreoffice-24-8-5":
> 
> https://git.libreoffice.org/core/commit/
> b86661f55d4226d0a69982364b9e17cb65fd245b
> 
> tdf#158221 sw: fix performance disaster in SwInsertBookmarkDlg
> 
> It will be available in 24.8.5.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Version: 24.8.7.2 (X86_64) / LibreOffice Community
Build ID: e07d0a63a46349d29051da79b1fde8160bab2a89
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded

Instant opening is back. Thanks Michael!
Comment 14 BogdanB 2025-08-09 12:54:28 UTC
Verified, based on comment 13.