tdf#158221 sw: fix performance disaster in SwInsertBookmarkDlg

Moving the shell cursor without Start/EndAction results in formatting
and repainting for every bookmark :(

(regression from commit aa6ec3f79607478213272283b7eb17ec2116173c)

Change-Id: I2eb77a7a6aa48a1f218957245d75399bddb594ff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180965
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 163ddd7a841fc4ee2b4a79a5ec5e5635bcc0cbc2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180983
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
(cherry picked from commit 5e85d816db0e6c4bf31bdfa84faf0507f277e617)